libs/image/kis_command_utils.h
@@ -22,11 +22,23 @@
 #include "kundo2command.h"
 #include "kis_undo_stores.h"
 #include "kritaimage_export.h"
+#include <functional>
 
 namespace KisCommandUtils
 {
+    /**
+     * @brief The AggregateCommand struct is a command with delayed
+     * initialization. On first redo() populateChildCommands() is called
+     * and the descendants add the desired commands to the internal list.
+     * After that, the added commands are executed on every undo()/redo().
+     *
+     * This structure is used when the commands should be populated from
+     * the context of the stroke, not from the GUI thread.
+     */
     struct KRITAIMAGE_EXPORT AggregateCommand : public KUndo2Command {
-        AggregateCommand();
+        AggregateCommand(KUndo2Command *parent = 0);
+        AggregateCommand(const KUndo2MagicString &text,
+                         KUndo2Command *parent = 0);
 
         void redo();
         void undo();
@@ -40,7 +52,31 @@ namespace KisCommandUtils
         KisSurrogateUndoStore m_store;
     };
 
+    /**
+     * @brief The LambdaCommand struct is a shorthand for creation of
+     * AggregateCommand commands using C++ lambda feature. Just pass
+     * a lambda object into a command and it will be called from within
+     * the context of the strokes thread to populate the command content.
+     */
+    struct KRITAIMAGE_EXPORT LambdaCommand : public AggregateCommand {
+        LambdaCommand(std::function<KUndo2Command*()> createCommandFunc);
+        LambdaCommand(const KUndo2MagicString &text,
+                      std::function<KUndo2Command*()> createCommandFunc);
+        LambdaCommand(const KUndo2MagicString &text,
+                      KUndo2Command *parent,
+                      std::function<KUndo2Command*()> createCommandFunc);
+        LambdaCommand(KUndo2Command *parent,
+                      std::function<KUndo2Command*()> createCommandFunc);
+
+    protected:
+        void populateChildCommands() override;
+
+    private:
+        std::function<KUndo2Command*()> m_createCommandFunc;
+    };
+
     struct KRITAIMAGE_EXPORT SkipFirstRedoWrapper : public KUndo2Command {
+
         SkipFirstRedoWrapper(KUndo2Command *child = 0, KUndo2Command *parent = 0);
         void redo();
         void undo();
